<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.views.CreateTaskAddDetailsFragment">

    <data>

        <variable
            name="viewModel"
            type="com.petproject.workflow.presentation.viewmodels.CreateTaskAddDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_main"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/employee_image_view"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_account_ff"
                    app:layout_constraintEnd_toStartOf="@+id/details_image_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/colorSecondary" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:background="?attr/colorSecondary"
                    app:layout_constraintBottom_toBottomOf="@+id/employee_image_view"
                    app:layout_constraintEnd_toStartOf="@+id/details_image_view"
                    app:layout_constraintStart_toEndOf="@+id/employee_image_view"
                    app:layout_constraintTop_toTopOf="@+id/employee_image_view" />

                <ImageView
                    android:id="@+id/details_image_view"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_news_ff"
                    app:layout_constraintEnd_toStartOf="@+id/done_image_view"
                    app:layout_constraintStart_toEndOf="@+id/employee_image_view"
                    app:layout_constraintTop_toTopOf="@+id/employee_image_view"
                    app:tint="?attr/colorSecondary" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:background="@color/white_transparent"
                    app:layout_constraintBottom_toBottomOf="@+id/employee_image_view"
                    app:layout_constraintEnd_toStartOf="@+id/done_image_view"
                    app:layout_constraintStart_toEndOf="@+id/details_image_view"
                    app:layout_constraintTop_toTopOf="@+id/employee_image_view" />

                <ImageView
                    android:id="@+id/done_image_view"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_approval"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/details_image_view"
                    app:layout_constraintTop_toTopOf="@+id/employee_image_view"
                    app:tint="@color/white_transparent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <include
                android:id="@+id/executor_employee"
                layout="@layout/item_employee_info" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:errorInputText="@{viewModel.errorInputDescription}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:hint="@string/description"
                    android:text="@={viewModel.descriptionField}"
                    android:inputType="textEmailAddress"
                    android:minHeight="124dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:errorInputText="@{viewModel.errorInputDeadline}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_deadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="text"
                    android:gravity="start|top"
                    android:hint="@string/deadline"
                    android:text="@={viewModel.deadlineField}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="start|top"
                    android:hint="@string/location_optional"
                    android:inputType="text"
                    android:text="@={viewModel.destinationField}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:checked="@{viewModel.priorityField}"
                android:text="@string/is_urgent"
                android:textSize="15sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.shouldBeInspectedField}"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/should_be_inspected"
                android:textSize="15sp" />

            <Button
                android:id="@+id/create_task_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/create_task" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>